test/scc/type/semantic-errors/008.a
008.t:1:17: error: alignment is zero